Added armhf target

--- a/Zone/config.json
+++ b/Zone/config.json
@@ -2,8 +2,8 @@
   "name": "Zone",
   "version": "0.1",
   "slug": "zone",
-  "description": "Connecting the zone border router to the mqtt broker",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "description": "Connects the zone border router to the mqtt broker",
+  "arch": ["armhf", "amd64"],
   "startup": "before",
   "boot": "auto",
   "auto_uart": true,
