another attempt at variables

--- a/Zone/Dockerfile
+++ b/Zone/Dockerfile
@@ -6,12 +6,12 @@ LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|amd64"
 
 ENV LANG C.UTF-8
 
-ARG ARCH
+ARG arch
 
 # Copy data for add-on
 COPY run.sh /
 # todo: check architecture
-COPY tunslip6-{ARCH} /tunslip6
+COPY tunslip6-${arch} /tunslip6
 RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
