--- a/Zone/Dockerfile
+++ b/Zone/Dockerfile
@@ -3,7 +3,6 @@ FROM $BUILD_FROM
 
 LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|amd64"
 
-
 ENV LANG C.UTF-8
 
 ARG BUILD_ARCH
@@ -12,7 +11,10 @@ ARG BUILD_ARCH
 COPY run.sh /
 # todo: check architecture
 COPY tunslip6-${BUILD_ARCH} /tunslip6
-RUN chmod a+x /run.sh
+
+RUN \
+    chmod a+x /run.sh
+    apk add --no-cache --virtual gcc g++
 
 CMD [ "/run.sh" ]
 
