attempting additional packages

--- a/Zone/Dockerfile
+++ b/Zone/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=
+ARG BUILD_FROM=hassio-addons/addon-base
 FROM $BUILD_FROM
 
 LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|amd64"
@@ -12,9 +12,7 @@ COPY run.sh /
 # todo: check architecture
 COPY tunslip6-${BUILD_ARCH} /tunslip6
 
-RUN \
-    chmod a+x /run.sh && \
-    apk add --no-cache --virtual gcc g++
+RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
 
