--- a/Zone/config.json
+++ b/Zone/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Zone hub",
-  "version": "0.41",
+  "version": "0.42",
   "slug": "zone",
   "description": "Connects the zone border router to the mqtt broker",
   "arch": ["armhf", "amd64"],
@@ -10,6 +10,9 @@
   "auto_uart": true,
   "options": {
     "serialport": "/dev/ttyAMA0"
+    "system_packages": [
+      "gcc",
+    ],
   },
   "schema": {
     "serialport": "str"
