attempting additional packages

--- a/Zone/config.json
+++ b/Zone/config.json
@@ -9,7 +9,7 @@
   "boot": "auto",
   "auto_uart": true,
   "options": {
-    "serialport": "/dev/ttyAMA0"
+    "serialport": "/dev/ttyAMA0",
     "system_packages": [
       "gcc",
     ],
