--- a/Zone/config.json
+++ b/Zone/config.json
@@ -10,9 +10,7 @@
   "auto_uart": true,
   "options": {
     "serialport": "/dev/ttyAMA0",
-    "system_packages": [
-      "gcc",
-    ],
+    "system_packages": [ "gcc" ]
   },
   "schema": {
     "serialport": "str"
