--- a/Zone/Dockerfile
+++ b/Zone/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=hassio-addons/addon-base
+ARG BUILD_FROM=bitnami/minideb:jessie #hassio-addons/addon-base
 FROM $BUILD_FROM
 
 LABEL io.hass.version="VERSION" io.hass.type="addon" io.hass.arch="armhf|amd64"
@@ -8,10 +8,10 @@ ENV LANG C.UTF-8
 ARG BUILD_ARCH
 
 # Copy data for add-on
-COPY run.sh /
-# todo: check architecture
+COPY run.sh
 COPY tunslip6-${BUILD_ARCH} /tunslip6
 
+RUN apk add libc6-dev
 RUN chmod a+x /run.sh
 
 CMD [ "/run.sh" ]
