--- a/Zone/config.json
+++ b/Zone/config.json
@@ -1,6 +1,6 @@
 {
 	"name": "Zone hub",
-	"version": "0.56",
+	"version": "0.57",
 	"slug": "zone",
 	"description": "Connects the zone border router to the mqtt broker",
 	"arch": ["armv7", "amd64"],
@@ -9,6 +9,7 @@
 	"boot": "auto",
 	"auto_uart": true,
 	"host_network": true,
+    "privileged": ["NET_ADMIN", "SYS_ADMIN"],
 	"devices": ["/dev/net/tun:/dev/net/tun:rwm"],
 	"options": {
 		"serialport": "/dev/ttyAMA0"
