--- a/Ion/config.json
+++ b/Ion/config.json
@@ -11,7 +11,7 @@
 	"uart": true,
 	"host_network": true,
 	"privileged": ["NET_ADMIN", "SYS_ADMIN"],
-	"devices": ["/dev/net/tun:/dev/net/tun:rwm"],
+	"devices": ["/dev/net/tun"],
 	"options": {
 		"serialport": "/dev/ttyAMA0"
 	},
